[gd_scene load_steps=4 format=2]

[ext_resource path="res://TitleScreen.gd" type="Script" id=1]
[ext_resource path="res://AboutWindow.tscn" type="PackedScene" id=2]
[ext_resource path="res://OptionsWindow.tscn" type="PackedScene" id=3]

[node name="TitleScreen" type="Node"]
script = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer"]
margin_left = 318.0
margin_top = 215.0
margin_right = 705.0
margin_bottom = 385.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 379.0
margin_bottom = 162.0

[node name="Title" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer"]
margin_right = 371.0
margin_bottom = 14.0
text = "Nap Time"
align = 1

[node name="Image" type="TextureRect" parent="CenterContainer/PanelContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 371.0
margin_bottom = 18.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/PanelContainer/VBoxContainer"]
margin_top = 22.0
margin_right = 371.0
margin_bottom = 154.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer"]
margin_right = 67.0
margin_bottom = 132.0

[node name="StartButton" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 67.0
margin_bottom = 30.0
text = "Start"

[node name="OptionsButton" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 34.0
margin_right = 67.0
margin_bottom = 64.0
text = "Options"

[node name="AboutButton" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 68.0
margin_right = 67.0
margin_bottom = 98.0
text = "About"

[node name="ExitButton" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 102.0
margin_right = 67.0
margin_bottom = 132.0
text = "Exit"

[node name="VBoxContainer2" type="VBoxContainer" parent="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer"]
margin_left = 71.0
margin_right = 371.0
margin_bottom = 132.0

[node name="Introduction" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_right = 300.0
margin_bottom = 48.0
text = "Introduction to the game goes here.

Maybe summarize the controls or something..."

[node name="AboutWindow" parent="." instance=ExtResource( 2 )]
visible = false

[node name="OptionsWindow" parent="." instance=ExtResource( 3 )]

[node name="ScreenDarken" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.784314 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer/AboutButton" to="." method="_on_AboutButton_pressed"]
[connection signal="pressed" from="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
